snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2-sources.jar.sha256
93802f775764faa2f79a15fc8573ddfe7f293ed3f7ab2dc39e57ee955430df3d